--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>venkatesh</h1>
     <img width="200px" src="logo.jpg" alt="">
+    <h1>new name</h1>
     <p>A true first-generation entrepreneur, Muthukumar Sunderrajan laid the foundation of this empire in 1992 with "SUMKA SONS", starting as a small trading company with no prior industry experience or family business background.</p>
 </body>
 </html>
