--- a/index.html
+++ b/index.html
@@ -3,12 +3,231 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Susin</title>
+    <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions</title>
+    <meta name="description" content="Leading manufacturer of Pneumatic Scotch Yoke Rotary Actuators, Gearboxes, Electro-Hydraulic Actuators, and Electrical Actuators for industrial applications.">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1>venkatesh</h1>
-    <img width="200px" src="logo.jpg" alt="">
-    <h1>new name</h1>
-    <p>A true first-generation entrepreneur, Muthukumar Sunderrajan laid the foundation of this empire in 1992 with "SUMKA SONS", starting as a small trading company with no prior industry experience or family business background.</p>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="logo">
+                    <img src="logo.jpg" alt="Company Logo">
+                    <span class="logo-text">Industrial Solutions</span>
+                </div>
+                <ul class="nav-menu" id="navMenu">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li class="dropdown">
+                        <a href="products.html">Products <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
+                            <li><a href="products.html#gearboxes">Gearboxes</a></li>
+                            <li><a href="products.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
+                            <li><a href="products.html#electrical">Electrical Actuators</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="industries.html">Industries</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-overlay"></div>
+        <div class="container">
+            <div class="hero-content">
+                <h1>Advanced Motion Control Solutions</h1>
+                <p>Leading manufacturer of industrial actuators, gearboxes, and motion control systems for critical applications worldwide</p>
+                <div class="hero-buttons">
+                    <a href="products.html" class="btn btn-primary">Explore Products</a>
+                    <a href="contact.html" class="btn btn-secondary">Get Quote</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Key Products Section -->
+    <section class="products-preview">
+        <div class="container">
+            <h2 class="section-title">Our Product Range</h2>
+            <p class="section-subtitle">Comprehensive solutions for industrial automation and control</p>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-icon">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <h3>Pneumatic Scotch Yoke Rotary Actuators</h3>
+                    <p>High-performance pneumatic actuators with scotch yoke mechanism for precise rotary motion control in demanding industrial environments.</p>
+                    <a href="products.html#pneumatic" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="product-card">
+                    <div class="product-icon">
+                        <i class="fas fa-gears"></i>
+                    </div>
+                    <h3>Gearboxes</h3>
+                    <p>Robust and efficient gearbox solutions designed for various torque requirements and speed reduction applications across industries.</p>
+                    <a href="products.html#gearboxes" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="product-card">
+                    <div class="product-icon">
+                        <i class="fas fa-oil-can"></i>
+                    </div>
+                    <h3>Electro-Hydraulic Actuators</h3>
+                    <p>Advanced electro-hydraulic actuators combining electrical control with hydraulic power for high-force applications and precise positioning.</p>
+                    <a href="products.html#electro-hydraulic" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="product-card">
+                    <div class="product-icon">
+                        <i class="fas fa-bolt"></i>
+                    </div>
+                    <h3>Electrical Actuators</h3>
+                    <p>Electric actuators offering clean, efficient, and reliable linear and rotary motion control with integrated control systems.</p>
+                    <a href="products.html#electrical" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Industries Served -->
+    <section class="industries">
+        <div class="container">
+            <h2 class="section-title">Industries We Serve</h2>
+            <div class="industries-grid">
+                <div class="industry-item">
+                    <i class="fas fa-industry"></i>
+                    <h4>Oil & Gas</h4>
+                    <p>Critical valve automation for upstream, midstream, and downstream operations</p>
+                </div>
+                <div class="industry-item">
+                    <i class="fas fa-tint"></i>
+                    <h4>Water Treatment</h4>
+                    <p>Reliable actuators for water and wastewater treatment facilities</p>
+                </div>
+                <div class="industry-item">
+                    <i class="fas fa-plug"></i>
+                    <h4>Power Generation</h4>
+                    <p>High-performance solutions for thermal, nuclear, and renewable energy</p>
+                </div>
+                <div class="industry-item">
+                    <i class="fas fa-flask"></i>
+                    <h4>Chemical Processing</h4>
+                    <p>Corrosion-resistant actuators for harsh chemical environments</p>
+                </div>
+                <div class="industry-item">
+                    <i class="fas fa-ship"></i>
+                    <h4>Marine & Offshore</h4>
+                    <p>Rugged solutions designed for marine and offshore applications</p>
+                </div>
+                <div class="industry-item">
+                    <i class="fas fa-building"></i>
+                    <h4>Pharmaceutical</h4>
+                    <p>Precision actuators meeting strict hygiene and quality standards</p>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="industries.html" class="btn btn-outline">View All Industries</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us -->
+    <section class="features">
+        <div class="container">
+            <h2 class="section-title">Why Choose Us</h2>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <i class="fas fa-certificate"></i>
+                    <h4>Certified Quality</h4>
+                    <p>ISO certified manufacturing with rigorous quality control processes</p>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-globe"></i>
+                    <h4>Global Reach</h4>
+                    <p>Worldwide distribution network and local support services</p>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-tools"></i>
+                    <h4>Expert Support</h4>
+                    <p>Comprehensive technical support and after-sales service</p>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-lightbulb"></i>
+                    <h4>Innovation</h4>
+                    <p>Continuous R&D for cutting-edge motion control solutions</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta">
+        <div class="container">
+            <div class="cta-content">
+                <h2>Ready to Find the Right Solution?</h2>
+                <p>Our expert team is here to help you select the perfect actuator or gearbox for your application</p>
+                <a href="contact.html" class="btn btn-primary btn-large">Contact Our Experts</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="industries.html">Industries</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Products</h4>
+                    <ul>
+                        <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
+                        <li><a href="products.html#gearboxes">Gearboxes</a></li>
+                        <li><a href="products.html#electro-hydraulic">Electro-Hydraulic</a></li>
+                        <li><a href="products.html#electrical">Electrical Actuators</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Resources</h4>
+                    <ul>
+                        <li><a href="resources.html">Downloads</a></li>
+                        <li><a href="resources.html">Technical Docs</a></li>
+                        <li><a href="resources.html">FAQs</a></li>
+                        <li><a href="resources.html">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
+                        <li><i class="fas fa-envelope"></i> info@industrialsolutions.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Industrial Park, Manufacturing District</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Industrial Solutions. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
