--- a/index.html
+++ b/index.html
@@ -66,23 +66,25 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-icon">
-                        <i class="fas fa-cog"></i>
+                        <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Actuator" class="product-card-img">
                     </div>
                     <h3>Pneumatic Scotch Yoke Rotary Actuators</h3>
+                    <p><strong>Series:</strong> PDS Actuator, HD Actuator</p>
                     <p>High-performance pneumatic actuators with scotch yoke mechanism for precise rotary motion control in demanding industrial environments.</p>
                     <a href="products.html#pneumatic" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <i class="fas fa-gears"></i>
+                        <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Gearbox" class="product-card-img">
                     </div>
                     <h3>Gearboxes</h3>
+                    <p><strong>Series:</strong> ITG Series Mechanical Worm Gear Actuators</p>
                     <p>Robust and efficient gearbox solutions designed for various torque requirements and speed reduction applications across industries.</p>
                     <a href="products.html#gearboxes" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <i class="fas fa-oil-can"></i>
+                        <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-card-img">
                     </div>
                     <h3>Electro-Hydraulic Actuators</h3>
                     <p>Advanced electro-hydraulic actuators combining electrical control with hydraulic power for high-force applications and precise positioning.</p>
@@ -90,9 +92,10 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <i class="fas fa-bolt"></i>
+                        <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Electrical Actuator" class="product-card-img">
                     </div>
                     <h3>Electrical Actuators</h3>
+                    <p><strong>Series:</strong> ITQ Series (Rotary)</p>
                     <p>Electric actuators offering clean, efficient, and reliable linear and rotary motion control with integrated control systems.</p>
                     <a href="products.html#electrical" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
                 </div>
