--- a/resources.html
+++ b/resources.html
@@ -66,27 +66,27 @@
                 <div class="download-grid">
                     <div class="download-item">
                         <i class="fas fa-file-pdf"></i>
-                        <h3>Pneumatic Scotch Yoke Actuators</h3>
-                        <p>Complete technical specifications and performance data</p>
-                        <a href="#" class="btn btn-outline">Download PDF</a>
+                        <h3>PDS Actuator Series Catalog</h3>
+                        <p>Complete technical specifications and performance data for Pneumatic Scotch Yoke Actuators</p>
+                        <a href="https://www.susingroup.com/assets/img/downloads/catalog/pneumatic/i-tork-pds-catalog.pdf" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                     <div class="download-item">
                         <i class="fas fa-file-pdf"></i>
-                        <h3>Gearbox Catalog</h3>
-                        <p>Comprehensive gearbox selection guide and specifications</p>
-                        <a href="#" class="btn btn-outline">Download PDF</a>
+                        <h3>ITG Series Catalog</h3>
+                        <p>Comprehensive gearbox selection guide and specifications for Mechanical Worm Gear Actuators</p>
+                        <a href="https://www.susingroup.com/assets/img/downloads/catalog/mechanical/itg-series-catalog.pdf" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                     <div class="download-item">
                         <i class="fas fa-file-pdf"></i>
-                        <h3>Electro-Hydraulic Actuators</h3>
-                        <p>Technical datasheet with installation and operation details</p>
-                        <a href="#" class="btn btn-outline">Download PDF</a>
+                        <h3>ITQ Heavy Duty Series Catalog</h3>
+                        <p>Complete product specifications and wiring diagrams for Electrical Actuators</p>
+                        <a href="https://www.susingroup.com/downloads/catalogs" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                     <div class="download-item">
                         <i class="fas fa-file-pdf"></i>
-                        <h3>Electrical Actuators</h3>
-                        <p>Complete product specifications and wiring diagrams</p>
-                        <a href="#" class="btn btn-outline">Download PDF</a>
+                        <h3>Hydraulic Actuators Catalog</h3>
+                        <p>Technical datasheet with installation and operation details for Electro-Hydraulic Actuators</p>
+                        <a href="https://www.susingroup.com/downloads/catalogs" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                     <div class="download-item">
                         <i class="fas fa-file-pdf"></i>
