--- a/industries.html
+++ b/industries.html
@@ -12,10 +12,10 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <img src="logo.jpg" alt="Company Logo">
                     <span class="logo-text">Industrial Solutions</span>
-                </div>
+                </a>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
@@ -27,11 +27,55 @@
                             <li><a href="products.html#electrical">Electrical Actuators</a></li>
                         </ul>
                     </li>
-                    <li><a href="industries.html" class="active">Industries</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="dropdown">
+                        <a href="industries.html" class="active">Industries <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
+                            <li><a href="industries.html#water-treatment">Water Treatment</a></li>
+                            <li><a href="industries.html#power-generation">Power Generation</a></li>
+                            <li><a href="industries.html#chemical">Chemical Processing</a></li>
+                            <li><a href="industries.html#marine">Marine & Offshore</a></li>
+                            <li><a href="industries.html#pharmaceutical">Pharmaceutical</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="services.html#installation">Installation & Commissioning</a></li>
+                            <li><a href="services.html#maintenance">Maintenance & Support</a></li>
+                            <li><a href="services.html#training">Training Programs</a></li>
+                            <li><a href="services.html#customization">Customization Services</a></li>
+                            <li><a href="services.html#spare-parts">Spare Parts & Components</a></li>
+                            <li><a href="services.html#technical-support">Technical Support</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="about.html">About Us <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="about.html#story">Our Story</a></li>
+                            <li><a href="about.html#mission">Mission & Values</a></li>
+                            <li><a href="about.html#certifications">Certifications</a></li>
+                            <li><a href="about.html#why-choose">Why Choose Us</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="resources.html">Resources <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="resources.html#datasheets">Datasheets</a></li>
+                            <li><a href="resources.html#manuals">Manuals</a></li>
+                            <li><a href="resources.html#faq">FAQs</a></li>
+                            <li><a href="resources.html#blog">Blog & News</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact.html">Contact <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="contact.html#contact-form">Contact Form</a></li>
+                            <li><a href="contact.html#sales">Sales Inquiry</a></li>
+                            <li><a href="contact.html#support">Technical Support</a></li>
+                            <li><a href="contact.html#locations">Office Locations</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="hamburger" id="hamburger">
                     <span></span>
