--- a/resources.html
+++ b/resources.html
@@ -63,6 +63,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
+                            <li><a href="resources.html#sizing-programs">Actuators Sizing Programs</a></li>
                             <li><a href="resources.html#faq">FAQs</a></li>
                             <li><a href="resources.html#blog">Blog & News</a></li>
                         </ul>
@@ -100,6 +101,7 @@
             <div class="resources-tabs">
                 <button class="tab-btn active" data-tab="datasheets">Datasheets</button>
                 <button class="tab-btn" data-tab="manuals">Manuals</button>
+                <button class="tab-btn" data-tab="sizing-programs">Sizing Programs</button>
                 <button class="tab-btn" data-tab="faq">FAQs</button>
                 <button class="tab-btn" data-tab="blog">Blog</button>
             </div>
@@ -175,6 +177,76 @@
                         <p>Common issues and solutions for all product lines</p>
                         <a href="#" class="btn btn-outline">Download PDF</a>
                     </div>
+                </div>
+            </div>
+
+            <!-- Sizing Programs Tab -->
+            <div class="tab-content" id="sizing-programs">
+                <h2>Actuators Sizing Programs</h2>
+                <p class="section-subtitle" style="text-align: center; margin-bottom: 3rem;">Interactive sizing tools to help you select the right actuator or gearbox for your application</p>
+                
+                <div class="download-grid">
+                    <div class="download-item">
+                        <i class="fas fa-calculator"></i>
+                        <h3>Pneumatic Actuator Sizing Program</h3>
+                        <p>Calculate the correct pneumatic actuator size based on valve torque requirements, operating pressure, and application parameters. This tool helps you select the optimal PDS or HD series actuator.</p>
+                        <div style="margin-top: 1.5rem;">
+                            <strong>Features:</strong>
+                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                                <li>Torque calculation based on valve size and type</li>
+                                <li>Operating pressure optimization</li>
+                                <li>Safety factor recommendations</li>
+                                <li>Model selection guide</li>
+                            </ul>
+                        </div>
+                        <a href="https://www.susingroup.com/tools/pneumatic-actuator-sizing" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">Launch Sizing Tool</a>
+                        <a href="https://www.susingroup.com/downloads/sizing-programs/pneumatic-actuator-sizing-guide.pdf" target="_blank" class="btn btn-outline" style="margin-top: 0.5rem; display: block;">Download Guide</a>
+                    </div>
+                    
+                    <div class="download-item">
+                        <i class="fas fa-cogs"></i>
+                        <h3>Gearbox Sizing Program</h3>
+                        <p>Determine the appropriate gearbox size and ratio for your application. Calculate torque requirements, speed reduction, and efficiency for ITG series mechanical worm gear actuators.</p>
+                        <div style="margin-top: 1.5rem;">
+                            <strong>Features:</strong>
+                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                                <li>Gear ratio calculation</li>
+                                <li>Torque capacity analysis</li>
+                                <li>Efficiency optimization</li>
+                                <li>Mounting configuration selection</li>
+                            </ul>
+                        </div>
+                        <a href="https://www.susingroup.com/tools/gearbox-sizing" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">Launch Sizing Tool</a>
+                        <a href="https://www.susingroup.com/downloads/sizing-programs/gearbox-sizing-guide.pdf" target="_blank" class="btn btn-outline" style="margin-top: 0.5rem; display: block;">Download Guide</a>
+                    </div>
+                </div>
+
+                <div style="background-color: var(--section-bg); padding: 3rem; border-radius: 12px; margin-top: 3rem; border: 1px solid var(--border-color);">
+                    <h3 style="color: var(--primary-color); margin-bottom: 1.5rem; text-align: center;">How to Use the Sizing Programs</h3>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
+                        <div>
+                            <h4 style="color: var(--primary-color); margin-bottom: 1rem;"><i class="fas fa-list-ol" style="margin-right: 0.5rem;"></i>Step 1: Gather Information</h4>
+                            <p style="color: var(--text-color); line-height: 1.7;">Collect your application requirements including valve size, torque requirements, operating pressure, and environmental conditions.</p>
+                        </div>
+                        <div>
+                            <h4 style="color: var(--primary-color); margin-bottom: 1rem;"><i class="fas fa-keyboard" style="margin-right: 0.5rem;"></i>Step 2: Enter Parameters</h4>
+                            <p style="color: var(--text-color); line-height: 1.7;">Input your application data into the sizing program. The tool will guide you through each required parameter.</p>
+                        </div>
+                        <div>
+                            <h4 style="color: var(--primary-color); margin-bottom: 1rem;"><i class="fas fa-calculator" style="margin-right: 0.5rem;"></i>Step 3: Review Results</h4>
+                            <p style="color: var(--text-color); line-height: 1.7;">The program will calculate and recommend the optimal actuator or gearbox size based on your inputs.</p>
+                        </div>
+                        <div>
+                            <h4 style="color: var(--primary-color); margin-bottom: 1rem;"><i class="fas fa-check-circle" style="margin-right: 0.5rem;"></i>Step 4: Verify Selection</h4>
+                            <p style="color: var(--text-color); line-height: 1.7;">Review the recommendations and consult with our technical team if you need assistance with final selection.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="background-color: var(--white); padding: 2rem; border-radius: 12px; margin-top: 2rem; border-left: 4px solid var(--primary-color);">
+                    <h4 style="color: var(--primary-color); margin-bottom: 1rem;"><i class="fas fa-info-circle" style="margin-right: 0.5rem;"></i>Need Help?</h4>
+                    <p style="color: var(--text-color); line-height: 1.7; margin-bottom: 1rem;">If you're unsure about any parameters or need assistance with sizing, our technical support team is ready to help. Contact us for personalized sizing assistance.</p>
+                    <a href="contact.html" class="btn btn-primary">Contact Technical Support</a>
                 </div>
             </div>
 
