--- a/services.html
+++ b/services.html
@@ -63,6 +63,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
+                            <li><a href="resources.html#sizing-programs">Actuators Sizing Programs</a></li>
                             <li><a href="resources.html#faq">FAQs</a></li>
                             <li><a href="resources.html#blog">Blog & News</a></li>
                         </ul>
