--- a/about.html
+++ b/about.html
@@ -216,14 +216,20 @@
                 <div class="footer-col">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@industrialsolutions.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Industrial Park, Manufacturing District</li>
+                        <li><i class="fas fa-phone"></i> +91 77080 97242</li>
+                        <li><i class="fas fa-envelope"></i> info@susin.in</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Coimbatore - 641 022, INDIA</li>
                     </ul>
+                    <div class="social-media" style="margin-top: 1.5rem;">
+                        <a href="https://www.linkedin.com/company/susin-group" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/susingroup" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/susingroup" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/@susingroup" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Industrial Solutions. All rights reserved.</p>
+                <p>&copy; 2024 Susin Group. All rights reserved.</p>
             </div>
         </div>
     </footer>
