--- a/contact.html
+++ b/contact.html
@@ -107,29 +107,65 @@
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h3>Address</h3>
-                                <p>Industrial Park<br>Manufacturing District<br>City, State 12345<br>Country</p>
+                                <h3>Head Office - India (Coimbatore)</h3>
+                                <p>No. 43-A 12, Vadakku Thottam Pakuthi Idigarai<br>(Near Gas Company)<br>Coimbatore - 641 022, INDIA</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h3>Phone</h3>
-                                <p>Sales: +1 (555) 123-4567<br>Support: +1 (555) 123-4568<br>Emergency: +1 (555) 123-4569</p>
+                                <p>+91 77080 97242 (Mr. Yuvaraj)<br>+91-422- 7140448 (Landline)<br>Sales: +91 63840 63034 (Mr. Dooshan)</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h3>Email</h3>
-                                <p>Sales: sales@industrialsolutions.com<br>Support: support@industrialsolutions.com<br>General: info@industrialsolutions.com</p>
+                                <p>General: info@susin.in<br>Sales: info@susinitork.in<br>Support: sales@ktcsystem.in</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-clock"></i>
                             <div>
                                 <h3>Business Hours</h3>
-                                <p>Monday - Friday: 8:00 AM - 6:00 PM<br>Saturday: 9:00 AM - 1:00 PM<br>Sunday: Closed</p>
+                                <p>Monday - Friday: 9:00 AM - 6:00 PM IST<br>Saturday: 9:00 AM - 1:00 PM IST<br>Sunday: Closed</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div style="margin-top: 3rem;">
+                        <h3 style="color: var(--primary-color); margin-bottom: 1.5rem;">Other Office Locations</h3>
+                        <div class="office-locations">
+                            <div class="office-item">
+                                <h4>Mumbai Office</h4>
+                                <p><strong>Address:</strong> Regus Business Centre, Level-1, Tiffany Building, Hiranandani Estate, Thane West– 400607, Maharashtra, India</p>
+                                <p><strong>Phone:</strong> +91 74003 55579 (Mr. Sanjey Ruley)</p>
+                                <p><strong>Email:</strong> sruley@regulusss.com</p>
+                            </div>
+                            <div class="office-item">
+                                <h4>UAE Office</h4>
+                                <p><strong>Address:</strong> SUSIN I-TORK ME FZC Y-61, SAIF SUIT, SAIF ZONE SHARJAH, UAE PO Box No: 122643</p>
+                                <p><strong>Phone:</strong> +971-56810 3434 (Mr. Nivin), +971-50206 5541 (Mr. Vijay Shankar)</p>
+                                <p><strong>Email:</strong> info@susinitorkme.com</p>
+                            </div>
+                            <div class="office-item">
+                                <h4>Qatar Office</h4>
+                                <p><strong>Address:</strong> Building No.6, 2nd Floor, Office 46 Barwa Commercial Avenue, Abu Hamour P.O. Box - 220, Doha - Qatar</p>
+                                <p><strong>Phone:</strong> +974-3164 8923 (Mr. Ragav), +974-3370 8598</p>
+                                <p><strong>Email:</strong> sales@susinqatar.com</p>
+                            </div>
+                            <div class="office-item">
+                                <h4>Oman Office</h4>
+                                <p><strong>Address:</strong> Gulf Energy Building, Building No: 1/21, Road No: 5001, Near Al Nadha Tower, Ghala North, Muscat, Sultanate of Oman</p>
+                                <p><strong>Phone:</strong> +968 78489305 (Mr. Vaitheeswaran), +968 99836012</p>
+                                <p><strong>Email:</strong> sales@susinitorkme.com</p>
+                            </div>
+                            <div class="office-item">
+                                <h4>Europe Office (KTC Controls)</h4>
+                                <p><strong>Address:</strong> KTC CONTROLS Krähenweg 11, 2459 Hamburg, Germany</p>
+                                <p><strong>Phone:</strong> +49-(0)151 54 32 92 55 (Carsten Teichler), +49-(0)40-5714 752-12</p>
+                                <p><strong>Email:</strong> info@ktc-systemtechnik.de</p>
                             </div>
                         </div>
                     </div>
@@ -221,14 +257,20 @@
                 <div class="footer-col">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@industrialsolutions.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Industrial Park, Manufacturing District</li>
+                        <li><i class="fas fa-phone"></i> +91 77080 97242</li>
+                        <li><i class="fas fa-envelope"></i> info@susin.in</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Coimbatore - 641 022, INDIA</li>
                     </ul>
+                    <div class="social-media" style="margin-top: 1.5rem;">
+                        <a href="https://www.linkedin.com/company/susin-group" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/susingroup" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/susingroup" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/@susingroup" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Industrial Solutions. All rights reserved.</p>
+                <p>&copy; 2024 Susin Group. All rights reserved.</p>
             </div>
         </div>
     </footer>
