changes resources updated

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,18 @@
                     <span class="logo-text">Industrial Solutions</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
+                    <li class="lang-selector">
+                        <a href="#" class="lang-toggle">
+                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <ul class="lang-dropdown">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">中文</a></li>
+                            <li><a href="#">العربية</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                            <li><a href="#">Français</a></li>
+                        </ul>
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="products.html">Products <i class="fas fa-chevron-down"></i></a>
@@ -111,14 +123,14 @@
                                 <p>No. 43-A 12, Vadakku Thottam Pakuthi Idigarai<br>(Near Gas Company)<br>Coimbatore - 641 022, INDIA</p>
                             </div>
                         </div>
-                        <div class="contact-item">
+                        <div class="contact-item" id="sales">
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h3>Phone</h3>
                                 <p>+91 77080 97242 (Mr. Yuvaraj)<br>+91-422- 7140448 (Landline)<br>Sales: +91 63840 63034 (Mr. Dooshan)</p>
                             </div>
                         </div>
-                        <div class="contact-item">
+                        <div class="contact-item" id="support">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h3>Email</h3>
@@ -134,7 +146,7 @@
                         </div>
                     </div>
                     
-                    <div style="margin-top: 3rem;">
+                    <div style="margin-top: 3rem;" id="locations">
                         <h3 style="color: var(--primary-color); margin-bottom: 1.5rem;">Other Office Locations</h3>
                         <div class="office-locations">
                             <div class="office-item">
@@ -171,7 +183,7 @@
                     </div>
                 </div>
 
-                <div class="contact-form-wrapper">
+                <div class="contact-form-wrapper" id="contact-form">
                     <h2>Send Us a Message</h2>
                     <form class="contact-form" id="contactForm">
                         <div class="form-group">
