--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
                     <span class="logo-text">Industrial Solutions</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
+                    <li class="lang-selector">
+                        <a href="#" class="lang-toggle">
+                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <ul class="lang-dropdown">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">中文</a></li>
+                            <li><a href="#">العربية</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                            <li><a href="#">Français</a></li>
+                        </ul>
+                    </li>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown">
                         <a href="products.html">Products <i class="fas fa-chevron-down"></i></a>
@@ -95,9 +107,15 @@
             <div class="hero-content">
                 <h1>Advanced Motion Control Solutions</h1>
                 <p>Leading manufacturer of industrial actuators, gearboxes, and motion control systems for critical applications worldwide</p>
-                <div class="hero-buttons">
-                    <a href="products.html" class="btn btn-primary">Explore Products</a>
-                    <a href="contact.html" class="btn btn-secondary">Get Quote</a>
+                <div class="hero-buttons" style="animation: fadeInUp 1.2s ease-out 0.4s both;">
+                    <a href="products.html" class="btn btn-primary">
+                        <span>Explore Products</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
+                    <a href="contact.html" class="btn btn-secondary">
+                        <span>Get Quote</span>
+                        <i class="fas fa-envelope"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -116,7 +134,10 @@
                     <h3>Pneumatic Scotch Yoke Rotary Actuators</h3>
                     <p><strong>Series:</strong> PDS Actuator, HD Actuator</p>
                     <p>High-performance pneumatic actuators with scotch yoke mechanism for precise rotary motion control in demanding industrial environments.</p>
-                    <a href="products.html#pneumatic" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                    <a href="products.html#pneumatic" class="product-link">
+                        <span>Learn More</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
@@ -125,7 +146,10 @@
                     <h3>Gearboxes</h3>
                     <p><strong>Series:</strong> ITG Series Mechanical Worm Gear Actuators</p>
                     <p>Robust and efficient gearbox solutions designed for various torque requirements and speed reduction applications across industries.</p>
-                    <a href="products.html#gearboxes" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                    <a href="products.html#gearboxes" class="product-link">
+                        <span>Learn More</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
@@ -133,7 +157,10 @@
                     </div>
                     <h3>Electro-Hydraulic Actuators</h3>
                     <p>Advanced electro-hydraulic actuators combining electrical control with hydraulic power for high-force applications and precise positioning.</p>
-                    <a href="products.html#electro-hydraulic" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                    <a href="products.html#electro-hydraulic" class="product-link">
+                        <span>Learn More</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
@@ -142,7 +169,10 @@
                     <h3>Electrical Actuators</h3>
                     <p><strong>Series:</strong> ITQ Series (Rotary)</p>
                     <p>Electric actuators offering clean, efficient, and reliable linear and rotary motion control with integrated control systems.</p>
-                    <a href="products.html#electrical" class="product-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                    <a href="products.html#electrical" class="product-link">
+                        <span>Learn More</span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
             </div>
         </div>
