--- a/products.html
+++ b/products.html
@@ -17,6 +17,18 @@
                     <span class="logo-text">Industrial Solutions</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
+                    <li class="lang-selector">
+                        <a href="#" class="lang-toggle">
+                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <ul class="lang-dropdown">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">中文</a></li>
+                            <li><a href="#">العربية</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                            <li><a href="#">Français</a></li>
+                        </ul>
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="products.html" class="active">Products <i class="fas fa-chevron-down"></i></a>
